[gd_scene load_steps=73 format=3 uid="uid://bxqmlcmxf5p5k"]

[ext_resource type="Script" path="res://scripts/tank.gd" id="1_f0xuw"]
[ext_resource type="Texture2D" uid="uid://dl2bdrkkubonp" path="res://assets/tank-assets/tank-back.png" id="2_wu2fc"]
[ext_resource type="Texture2D" uid="uid://cscvha737pyvp" path="res://assets/tank-assets/tank-back-attack.png" id="3_3qvfd"]
[ext_resource type="PackedScene" uid="uid://d4aiubsji5y0w" path="res://scenes/health_component.tscn" id="3_f1iw1"]
[ext_resource type="PackedScene" uid="uid://c8nuyfj6l50ju" path="res://scenes/hitbox_component.tscn" id="4_lpcpn"]
[ext_resource type="Texture2D" uid="uid://wl1g67ga0cgk" path="res://assets/tank-assets/tank-front.png" id="4_mw1xs"]
[ext_resource type="Texture2D" uid="uid://cfmiu5mcrri0t" path="res://assets/monsters_die.png" id="4_srgo2"]
[ext_resource type="Texture2D" uid="uid://cgn64psnq4gm8" path="res://assets/tank-assets/tank-front-attack.png" id="5_wbg8l"]
[ext_resource type="Script" path="res://scripts/States/StateMachine.gd" id="5_yb75h"]
[ext_resource type="Script" path="res://scripts/States/EnemyIdle.gd" id="6_2mqua"]
[ext_resource type="Texture2D" uid="uid://b65occvqipeaa" path="res://assets/tank-assets/tank-side.png" id="6_8rp0r"]
[ext_resource type="Script" path="res://scripts/States/EnemyFollow.gd" id="7_6bvxx"]
[ext_resource type="Texture2D" uid="uid://dajl6gdr2eit3" path="res://assets/tank-assets/tank-side-attack.png" id="7_uif74"]
[ext_resource type="Script" path="res://scripts/currency_controller.gd" id="13_td6p0"]
[ext_resource type="AudioStream" uid="uid://l1s1krv2e1iv" path="res://assets/audio/zombie-bite-96528.mp3" id="15_frjsd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0wtt1"]
atlas = ExtResource("2_wu2fc")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk3lw"]
atlas = ExtResource("2_wu2fc")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7glrn"]
atlas = ExtResource("2_wu2fc")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_otlu4"]
atlas = ExtResource("2_wu2fc")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y3up"]
atlas = ExtResource("2_wu2fc")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoidg"]
atlas = ExtResource("2_wu2fc")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy42r"]
atlas = ExtResource("2_wu2fc")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvp10"]
atlas = ExtResource("2_wu2fc")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nf76"]
atlas = ExtResource("2_wu2fc")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_etmkd"]
atlas = ExtResource("3_3qvfd")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghfk6"]
atlas = ExtResource("3_3qvfd")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5x1n"]
atlas = ExtResource("3_3qvfd")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysugq"]
atlas = ExtResource("3_3qvfd")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4isu"]
atlas = ExtResource("3_3qvfd")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_12yih"]
atlas = ExtResource("4_srgo2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc0ni"]
atlas = ExtResource("4_srgo2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gdfy"]
atlas = ExtResource("4_srgo2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrccs"]
atlas = ExtResource("4_srgo2")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxoan"]
atlas = ExtResource("4_srgo2")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wn1p"]
atlas = ExtResource("4_srgo2")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_43xqs"]
atlas = ExtResource("4_srgo2")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2lyk"]
atlas = ExtResource("4_srgo2")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_htgwd"]
atlas = ExtResource("4_mw1xs")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcouq"]
atlas = ExtResource("4_mw1xs")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne38g"]
atlas = ExtResource("4_mw1xs")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_joh22"]
atlas = ExtResource("4_mw1xs")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4jy1"]
atlas = ExtResource("4_mw1xs")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy8og"]
atlas = ExtResource("4_mw1xs")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_flcpt"]
atlas = ExtResource("4_mw1xs")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnw76"]
atlas = ExtResource("4_mw1xs")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ano15"]
atlas = ExtResource("4_mw1xs")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gybhg"]
atlas = ExtResource("5_wbg8l")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgv4d"]
atlas = ExtResource("5_wbg8l")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0tmb"]
atlas = ExtResource("5_wbg8l")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj8u5"]
atlas = ExtResource("5_wbg8l")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wviiv"]
atlas = ExtResource("5_wbg8l")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t3u2"]
atlas = ExtResource("6_8rp0r")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eux4x"]
atlas = ExtResource("6_8rp0r")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh21b"]
atlas = ExtResource("6_8rp0r")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_j68ee"]
atlas = ExtResource("6_8rp0r")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hmje"]
atlas = ExtResource("6_8rp0r")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc36c"]
atlas = ExtResource("6_8rp0r")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xds7d"]
atlas = ExtResource("6_8rp0r")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_km288"]
atlas = ExtResource("6_8rp0r")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3id6q"]
atlas = ExtResource("6_8rp0r")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdj5i"]
atlas = ExtResource("7_uif74")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wpqf"]
atlas = ExtResource("7_uif74")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhigb"]
atlas = ExtResource("7_uif74")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vskgo"]
atlas = ExtResource("7_uif74")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj5kv"]
atlas = ExtResource("7_uif74")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_ai57u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wtt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk3lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otlu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y3up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoidg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy42r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvp10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nf76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy42r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoidg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y3up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otlu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk3lw")
}],
"loop": true,
"name": &"back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etmkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghfk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5x1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysugq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4isu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysugq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5x1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghfk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etmkd")
}],
"loop": false,
"name": &"back_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12yih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc0ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gdfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrccs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxoan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wn1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43xqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2lyk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htgwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcouq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne38g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joh22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4jy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy8og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flcpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnw76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ano15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flcpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy8og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4jy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joh22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne38g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcouq")
}],
"loop": true,
"name": &"front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gybhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgv4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0tmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj8u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wviiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj8u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0tmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgv4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gybhg")
}],
"loop": false,
"name": &"front_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t3u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eux4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j68ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hmje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xds7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km288")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3id6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km288")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xds7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hmje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j68ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eux4x")
}],
"loop": true,
"name": &"side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdj5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhigb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vskgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj5kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vskgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhigb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdj5i")
}],
"loop": false,
"name": &"side_attack",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xl8i"]
size = Vector2(10.0523, 14.1097)

[sub_resource type="CircleShape2D" id="CircleShape2D_17wcc"]
radius = 3.57988

[sub_resource type="Animation" id="Animation_61w2v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qseox"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_qwu5q"]
resource_name = "hit2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.557112, 0.22074, 0.141771, 1), Color(1, 1, 1, 1), Color(0.556863, 0.219608, 0.141176, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i7qrr"]
_data = {
"RESET": SubResource("Animation_61w2v"),
"hit": SubResource("Animation_qseox"),
"hit2": SubResource("Animation_qwu5q")
}

[node name="Tank" type="CharacterBody2D" groups=["Enemies"]]
light_mask = 2
z_index = 5
collision_layer = 3
collision_mask = 7
script = ExtResource("1_f0xuw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -20)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ai57u")
animation = &"front"
autoplay = "front"
frame = 7
frame_progress = 0.485175

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -9)
scale = Vector2(15.1334, -13.8912)
shape = SubResource("RectangleShape2D_6xl8i")

[node name="HealthComponent" parent="." instance=ExtResource("3_f1iw1")]
visible = false
MAX_HEALTH = 80.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "body") instance=ExtResource("4_lpcpn")]
position = Vector2(1, 2)
scale = Vector2(1.78202, 2.29863)
collision_layer = 2
collision_mask = 5
health_component = NodePath("../HealthComponent")
body = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.56116, -10.006)
scale = Vector2(20.5734, -13.8912)
shape = SubResource("CircleShape2D_17wcc")
debug_color = Color(0.967632, 0, 0.473028, 0.42)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCoolDownTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_yb75h")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_2mqua")
enemy = NodePath("../..")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "navigation_agent_2d")]
script = ExtResource("7_6bvxx")
enemy = NodePath("../..")
move_speed = 300.0
navigation_agent_2d = NodePath("../../NavigationAgent2D")

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i7qrr")
}

[node name="CurrencyController" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("13_td6p0")
health_component = NodePath("../HealthComponent")
VALUE = 20.0

[node name="EnemiHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_frjsd")
volume_db = -10.0
pitch_scale = 0.5

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 200.0
target_desired_distance = 200.0
path_max_distance = 200.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="." method="_on_hitbox_component_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCoolDownTimer" to="." method="_on_attack_cool_down_timer_timeout"]
